src/test/ui/rust-unstable-column-gated.rs
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
fn main() {
    println!("{}", __rust_unstable_column!());
    //~^ ERROR use of unstable library feature '__rust_unstable_column'
}
=======
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
